--- a/my-apps/double-speed/local/inputs.conf
+++ b/my-apps/double-speed/local/inputs.conf
@@ -1,6 +1,6 @@
 [script://$SPLUNK_HOME/etc/apps/double-speed/bin/heure.py]
 # frequency to run the script, in seconds
-_meta=cust::customer-double
+cust = customer-double
 interval = 5 
 sourcetype=heure
 #
