--- a/my-apps/normal/local/inputs.conf
+++ b/my-apps/normal/local/inputs.conf
@@ -1,6 +1,6 @@
 [script://$SPLUNK_HOME/etc/apps/normal/bin/heure.py]
 # frequency to run the script, in seconds
-_meta=cust::customer-normal
+cust = customer-normal
 interval = 10 
 sourcetype=heure
 #
