--- a/my-apps/unlimited-speed/local/inputs.conf
+++ b/my-apps/unlimited-speed/local/inputs.conf
@@ -1,6 +1,6 @@
 [script://$SPLUNK_HOME/etc/apps/unlimited-speed/bin/heure.py]
 # frequency to run the script, in seconds
-_meta=cust::customer-unlimited
+cust = customer-unlimited
 interval = 1
 sourcetype=heure
 #
