--- a/compose.yml
+++ b/compose.yml
@@ -17,8 +17,8 @@ services:
     ports:
       - 8000:8000
     volumes:
-      - so1-var:/opt/splunk/var
-      - so1-etc:/opt/splunk/etc
+      # - so1-var:/opt/splunk/var
+      # - so1-etc:/opt/splunk/etc
       - ./configs/so1.yml:/tmp/defaults/default.yml
 
   ds1:
@@ -148,6 +148,6 @@ networks:
     attachable: true
 
 volumes:
-  so1-var:
-  so1-etc:
+  # so1-var:
+  # so1-etc:
   minio-data:
