Remove unused vars

--- a/compose.yml
+++ b/compose.yml
@@ -123,8 +123,7 @@ services:
     platform: linux/amd64
     environment:
       MINIO_SERVER: ${MINIO_SERVER:-minio}
-      MINIO_BUCKET: ${INGEST_ACTION_BUCKET}
-      MINIO_ROOT_USER: ${MINIO_ROOT_USER}
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER:-admin}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
       AWS_ACCESS_KEY_ID: ${INGEST_ACTION_AK}
       AWS_SECRET_ACCESS_KEY: ${INGEST_ACTION_SK}
