--- a/compose.yml
+++ b/compose.yml
@@ -94,7 +94,7 @@ services:
     image: minio/minio
     platform: linux/amd64
     environment:
-      MINIO_ROOT_USER:
+      MINIO_ROOT_USER: ${MINIO_ROOT_USER:-admin}
       MINIO_ROOT_PASSWORD:
       ${TZ:-Europe/Brussels}:
     command: server --console-address ":9001" /data --certs-dir /certs
