change format and compression

--- a/configs/splunk/so1.yml
+++ b/configs/splunk/so1.yml
@@ -64,4 +64,6 @@ splunk:
           partitionBy: day, sourcetype
           batchSizeThresholdKB: 10
           batchTimeout: 60
-          format: ndjson
+          compression: gzip
+          format: raw
+
