--- a/compose.yml
+++ b/compose.yml
@@ -79,11 +79,12 @@ services:
       TZ: ${TZ:-Europe/Brussels}
     command: server --console-address ":9001" /data --certs-dir /certs
     hostname: minio
-    healthcheck:
-      test: ["CMD", "curl", "-k", "-f", "https://minio:9000/minio/health/live"]
-      interval: 30s
-      timeout: 20s
-      retries: 3
+    healthcheck:  # See: https://github.com/minio/minio/issues/18373
+      test: timeout 5s bash -c ':> /dev/tcp/127.0.0.1/9000' || exit 1
+      interval: 5s
+      retries: 1
+      start_period: 5s
+      timeout: 5s
     volumes:
       - minio-data:/data
       - ./certs:/certs
