--- a/configs/splunk/so1.yml
+++ b/configs/splunk/so1.yml
@@ -1,4 +1,9 @@
 splunk:
+  hec:
+    enable: True
+    ssl: True
+    token: abcd-1234-efgh-5678
+    port: 8088
   conf:
     indexes:
       directory: /opt/splunk/etc/apps/search/local/
