--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,8 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
+    -   id: check-case-conflict
+    -   id: check-executables-have-shebangs
 -   repo: https://github.com/psf/black
     rev: 23.11.0
     hooks:
