--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,3 +22,11 @@ repos:
     -   id: isort
         files: "\\.(py)$"
         args: [--settings-path=pyproject.toml]
+-   repo: https://github.com/pycqa/flake8.git
+    rev: 6.1.0
+    hooks:
+      - id: flake8
+        additional_dependencies:
+          - flake8-black>=0.1.1
+        language_version: python3
+        args: ['--ignore=E129,E2', '--max-line-length=88', '--max-complexity=18', '--select=B,C,E,F,W,T4,B9']
