--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,9 +7,12 @@ repos:
     -   id: trailing-whitespace
     -   id: end-of-file-fixer
     -   id: check-yaml
+    -   id: check-json
     -   id: check-added-large-files
+        args: [--maxkb=10000]
     -   id: check-case-conflict
     -   id: check-executables-have-shebangs
+    -   id: requirements-txt-fixer
 -   repo: https://github.com/psf/black
     rev: 23.11.0
     hooks:
