put classes definition into own module

--- a/configs/splunk/app.ini
+++ b/configs/splunk/app.ini
@@ -5,5 +5,5 @@ SECRET_KEY = Password$
 ; COMPLIANCY_BUCKET = compliancy-bucket
 
 [splunk]
-HOST = localhost:8088
-TOKEN = aabbcc
+; HOST = localhost:8088
+TOKEN = abcd-1234-efgh-5678
