--- a/configs/splunk/app.ini
+++ b/configs/splunk/app.ini
@@ -1,5 +1,6 @@
 [minio]
-; HOST = localhost:9000
+; HOST = localhost
+; PORT = 9000
 ; ACCESS_KEY = admin
 SECRET_KEY = Password$
 ; COMPLIANCY_BUCKET = compliancy-bucket
