more class params

--- a/configs/splunk/app.ini
+++ b/configs/splunk/app.ini
@@ -4,8 +4,11 @@
 ; ACCESS_KEY = admin
 SECRET_KEY = Password$
 ; COMPLIANCY_BUCKET = compliancy-bucket
+; SSL_VERIFY = false
 
 [splunk]
-; HOST = localhost:8088
+; HOST = localhost
 ; PORT = 8088
 TOKEN = abcd-1234-efgh-5678
+; PROTO = https
+; SSL_VERIFY = false
