--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,4 +32,4 @@ repos:
         additional_dependencies:
           - flake8-black>=0.1.1
         language_version: python3
-        args: ['--ignore=E129,E2', '--max-line-length=88', '--max-complexity=18', '--select=B,C,E,F,W,T4,B9']
+        args: ['--ignore=E129,E2,W503', '--max-line-length=88', '--max-complexity=18', '--select=B,C,E,F,W,T4,B9']
