--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,22 +5,27 @@ repos:
     rev: v4.5.0
     hooks:
     -   id: trailing-whitespace
-    -   id: end-of-file-fixer
+    -   id: mixed-line-ending
     -   id: check-yaml
     -   id: check-json
+    -   id: check-toml
     -   id: check-added-large-files
         args: [--maxkb=10000]
     -   id: check-case-conflict
     -   id: check-executables-have-shebangs
     -   id: requirements-txt-fixer
+    -   id: end-of-file-fixer
+    -   id: check-builtin-literals
+    -   id: check-case-conflict
+    -   id: check-docstring-first
 -   repo: https://github.com/psf/black
-    rev: 23.11.0
+    rev: 23.12.0
     hooks:
     -   id: black
         args: [--config=pyproject.toml]
 
 -   repo: https://github.com/pycqa/isort
-    rev: 5.12.0
+    rev: 5.13.1
     hooks:
     -   id: isort
         files: "\\.(py)$"
