--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,11 @@ repos:
     -   id: check-builtin-literals
     -   id: check-case-conflict
     -   id: check-docstring-first
+-   repo: https://github.com/PyCQA/autoflake
+    rev: v2.2.1
+    hooks:
+    -   id: autoflake
+        args: [--remove-all-unused-imports, --in-place]
 -   repo: https://github.com/psf/black
     rev: 23.12.0
     hooks:
