--- a/configs/splunk/app.ini
+++ b/configs/splunk/app.ini
@@ -8,7 +8,7 @@ SECRET_KEY = Password$
 
 [splunk]
 ; HOST = localhost
-; PORT = 8088
+PORT = 8188
 TOKEN = abcd-1234-efgh-5678
 ; PROTO = https
 ; SSL_VERIFY = false
