--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,7 @@ repos:
     -   id: check-builtin-literals
     -   id: check-case-conflict
     -   id: check-docstring-first
+
 -   repo: https://github.com/PyCQA/autoflake
     rev: v2.2.1
     hooks:
@@ -30,7 +31,7 @@ repos:
         args: [--config=pyproject.toml]
 
 -   repo: https://github.com/pycqa/isort
-    rev: 5.13.1
+    rev: 5.13.2
     hooks:
     -   id: isort
         files: "\\.(py)$"
@@ -43,3 +44,12 @@ repos:
           - flake8-black>=0.1.1
         language_version: python3
         args: ['--ignore=E129,E2,W503', '--max-line-length=88', '--max-complexity=18', '--select=B,C,E,F,W,T4,B9']
+-   repo: https://github.com/markdownlint/markdownlint.git
+    rev: v0.12.0
+    hooks:
+    -   id: markdownlint
+        name: Markdownlint
+        description: Run markdownlint on your Markdown files
+        entry: mdl
+        language: ruby
+        files: \.(md|mdown|markdown)$
